--- a/sopfia/index.html
+++ b/sopfia/index.html
@@ -434,7 +434,7 @@
               <source srcset="img/logoFooterMariaAnna.png" type="image/png">-->
         <img style="width: 250px; height: 250px" class="footer__logo" src="img/logo.jpg" alt="Sopfia">
     </picture>
-    <p class="footerCopyright">© Copyright 2020 Pracownia Krawiecka Sopfia</p>
+    <p class="footerCopyright">© Copyright 2020 Pracownia Krawiecka Sophia</p>
 </footer>
 
 </body>
