--- a/sopfia/index.html
+++ b/sopfia/index.html
@@ -414,8 +414,7 @@
 
                      </div>
                  </form>-->
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2392.633104877374!2d23.113601715831155!3d53.152678879938904!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x471ffc6003e66261%3A0xf9acbfb62070ae77!2zWmFnw7NybmEgMzgsIEJpYcWCeXN0b2s!5e0!3m2!1spl!2spl!4v1577653622274!5m2!1spl!2spl"
-                    width=100% height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2392.277097489101!2d23.08151341610994!3d53.15906727994013!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x471ffc95053a9aa9%3A0xcd65daf8591c94e!2sPrz%C4%99dzalniana%206l%2C%2015-688%20Bia%C5%82ystok!5e0!3m2!1spl!2spl!4v1577739443882!5m2!1spl!2spl" width=100% height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
 
         </div>
     </section>
